[gd_scene load_steps=5 format=2]

[ext_resource path="res://Systems/DialogueSystem/Dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 23
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 2 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
mouse_filter = 2
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="ReplaceMe" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_right = 902.0
margin_bottom = 200.0
rect_min_size = Vector2( 800, 200 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 795.0
margin_bottom = 195.0
mouse_filter = 2
size_flags_stretch_ratio = 2.0

[node name="character_name_text" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe/MarginContainer/VBoxContainer"]
margin_right = 790.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Character Name"
text = "Character Name"

[node name="dialogue_display_text" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 790.0
margin_bottom = 149.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "This is [color=blue]display[/color] text"
tab_size = 3
text = "This is display text"

[node name="Choices" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe/MarginContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 790.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_vertical = 3
alignment = 2

[node name="Options" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe/MarginContainer/VBoxContainer/Choices"]
margin_right = 790.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NPC Picture" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe"]
margin_top = -150.0
margin_right = 144.0
margin_bottom = -6.0
mouse_filter = 2

[node name="dialogue_marker" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceMe"]
visible = false
margin_left = 768.0
margin_top = 170.0
margin_right = 792.0
margin_bottom = 194.0
mouse_filter = 2
color = Color( 0.691406, 0.691406, 0.691406, 1 )

[node name="Tween" type="Tween" parent="."]
